<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    android:padding="8dp"
    android:background="#fff">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/loading_shape"
        android:id="@+id/thumbnail"
        android:scaleType="centerCrop"
        android:contentDescription="@string/foto" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_name"
            android:text="@string/movie_title"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_rating"
            android:text="@string/_0_0"
            android:layout_marginTop="5dp"
            android:background="@drawable/rating_background"
            android:textColor="#fff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingRight="5dp"
            android:drawableLeft="@drawable/ic_star_black_24dp"
            android:paddingEnd="5dp"
            android:drawableStart="@drawable/ic_star_black_24dp"
            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/movie_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity" />

        <TextView
            android:id="@+id/movie_sinopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sinopsis_film"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</LinearLayout>