<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovieActivity">

    <android.support.design.widget.AppBarLayout
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:id="@+id/applayout_id">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/collapsingtoolbar_id"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="@string/movie_title"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light">
            </android.support.v7.widget.Toolbar>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="50dp">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/loading_shape"
                android:id="@+id/aa_thumbnail"
                android:contentDescription="@string/foto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:orientation="vertical"
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/aa_movie_name"
                    android:text="@string/movie_title"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_popularity"
                    android:id="@+id/aa_movie_popularity"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/aa_movie_rating"
                    android:text="@string/_0_0"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rating_background"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_star_black_24dp"
                    android:paddingRight="5dp"
                    android:drawableStart="@drawable/ic_star_black_24dp"
                    android:paddingEnd="5dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_sinopsis"
            android:layout_marginTop="5dp"
            android:id="@+id/aa_movie_sinopsis"/>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>